[WFCORE-7678] Add --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED to the default modular JVM options
Required by the ProtoStream annotation marshaller introduced in wildfly-clustering 12, which uses MethodHandles.privateLookupIn(...) on sun.reflect.annotation.AnnotationInvocationHandler.
Without this option, marshalling of annotations is disabled.

Signed-off-by: Radoslav Husar <rhusar@ibm.com>